objects/Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CAD_Licenses__c</fullName>
        <label>CAD Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCH_Licenses__c</fullName>
        <label>CCH Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCM_Licenses__c</fullName>
        <label>CCM Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CST_Licenses__c</fullName>
        <label>CST Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copado_Licenses__c</fullName>
        <label>Copado Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copado_Site__c</fullName>
        <defaultValue>&quot;http://copado.sandbox.cs17.force.com&quot;</defaultValue>
        <label>Copado_Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CryptoKEY__c</fullName>
        <defaultValue>&apos;TL9oaxsU41iBFFoM2eKNPQPQzSHb+pdta7GLCJRr0gg=&apos;</defaultValue>
        <description>Crypto key to use in DeployAPI class.</description>
        <label>CryptoKEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled_Multi_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Multi-Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <defaultValue>&quot;copado__&quot;</defaultValue>
        <inlineHelpText>The namespace should contain two underscores &quot;__&quot; e.g. copado__</inlineHelpText>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_URL__c</fullName>
        <defaultValue>&quot;https://copado.herokuapp.com&quot;</defaultValue>
        <label>Server_URL</label>
        <type>Url</type>
    </fields>
    <label>Settings</label>
</CustomObject>